# audio_capture

./: CMakeLists.txt
rokidrecordclient/: Android.mk  CMakeLists.txt  socket_client.c
rokidrecordserver/: Android.mk  CMakeLists.txt  main.c  pcm.c  pipe.c  pipe.h  pipe_util.c  pipe_util.h  robotcap.c  robotcap.h  server.c
